QoL and features enchancment, added the OTP
